tests/reference/asr-fixed_form_external_mixed-7239df0.stderr
semantic error: Type mismatch in argument 1
 --> tests/errors/fixed_form_external_mixed.f:6:11
  |
6 |           call g(a)
  |           ^^^^^^^^^ 
